<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background_grey">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/background_white">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/app_icon_tint"/>
        <TextView
            android:id="@+id/tvOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tvOption"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvWhocanaccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvWhocanaccess"
        android:padding="16sp"
        android:textColor="@color/text_color_secondary"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/rg_visibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_white"
        android:padding="8dp">
        <RadioButton
            android:id="@+id/rb_public"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_public"
            android:textColor="@color/text_color_primary"/>
        <RadioButton
            android:id="@+id/rb_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_private"
            android:textColor="@color/text_color_primary"/>
    </RadioGroup>
</LinearLayout>
